astro/ingress-astro.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-astro-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - blog.facturameya.online
      secretName: blog-astro-tls-secret
  rules:
    - host: blog.facturameya.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-astro-service
                port:
                  number: 80
